<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintVertical_chainStyle="packed"
    android:background="?attr/colorPrimary"
    tools:context=".AdditionalInfoActivity">
    <LinearLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/top_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginEnd="52dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin">
    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width= "44dp"
        android:layout_height="44dp"
        android:layout_margin="@dimen/small_margin"
        android:background="?attr/colorPrimary"
        android:src="@drawable/back_icon" />
    <TextView
        android:textSize="25sp"
        android:fontFamily="@font/futura_medium"
        android:layout_marginStart="@dimen/medium_margin"
        tools:text ="192.168.1.1/24"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:textColor="?attr/colorOnPrimary"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp" />
        <ImageView
            android:layout_width="38dp"
            android:layout_height="26dp"
            android:src="@drawable/flag"
            android:layout_marginStart="30dp"/>
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/country_layout"
        app:layout_constraintVertical_chainStyle="packed"
        style="@style/InfoElementStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_header"
        app:layout_constraintBottom_toTopOf="@id/city_layout">
        <TextView
            style="@style/HeaderStartStyle"
            android:text="@string/country"
            android:id="@+id/header_start5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            style="@style/HeaderEndStyle"
            android:id="@+id/header_end5"
            tools:text="Россия"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/header_start5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/city_layout"
        style="@style/InfoElementStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/provider_layout"
        app:layout_constraintTop_toBottomOf="@+id/country_layout">
        <TextView
            style="@style/HeaderStartStyle"
            android:text="@string/city"
            android:id="@+id/header_start4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/header_2"
            />

        <TextView
            style="@style/HeaderEndStyle"
            android:id="@+id/header_end4"
            tools:text="Москва"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/header_start4" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/provider_layout"
        style="@style/InfoElementStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/subnet_layout"
        app:layout_constraintTop_toBottomOf="@id/city_layout">
        <TextView
            style="@style/HeaderStartStyle"
            android:text="@string/provider"
            android:id="@+id/header_start3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            style="@style/HeaderEndStyle"
            android:id="@+id/header_end3"
            tools:text="MGTS"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/header_start3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/subnet_layout"
        style="@style/InfoElementStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/longitude_layout"
        app:layout_constraintTop_toBottomOf="@id/provider_layout">
        <TextView
            style="@style/HeaderStartStyle"
            android:text="@string/subnet"
            android:id="@+id/header_start2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            style="@style/HeaderEndStyle"
            android:id="@+id/header_end2"
            tools:text="192.168.1.0/22"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/header_start2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/longitude_layout"
        style="@style/InfoElementStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/latitude_layout"
        app:layout_constraintTop_toBottomOf="@id/subnet_layout">
        <TextView
            style="@style/HeaderStartStyle"
            android:text="@string/latitude"
            android:id="@+id/header_start1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            style="@style/HeaderEndStyle"
            android:id="@+id/header_end1"
            tools:text="77.245233"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/header_start1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/latitude_layout"
        style="@style/InfoElementStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/latitude_layout"
        app:layout_constraintBottom_toTopOf="@id/country_local_layout">
        <TextView
            style="@style/HeaderStartStyle"
            android:text="@string/longitude"
            android:id="@+id/header_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            style="@style/HeaderEndStyle"
            android:id="@+id/header_end"
            tools:text="32.234232"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/header_start" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/country_local_layout"
        app:layout_constraintVertical_chainStyle="packed"
        style="@style/InfoElementStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/latitude_layout"
        app:layout_constraintBottom_toTopOf="@id/country_code_layout">
        <TextView
            style="@style/HeaderStartStyle"
            android:text="@string/local_country_name"
            android:id="@+id/header_start11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            style="@style/HeaderEndStyle"
            android:id="@+id/header_end11"
            tools:text="Россия"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/header_start11" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/country_code_layout"
        style="@style/InfoElementStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/region_layout"
        app:layout_constraintTop_toBottomOf="@+id/country_local_layout">
        <TextView
            style="@style/HeaderStartStyle"
            android:text="@string/country_code"
            android:id="@+id/header_start10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/header_2"
            />

        <TextView
            style="@style/HeaderEndStyle"
            android:id="@+id/header_end10"
            tools:text="RU"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/header_start10" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/region_layout"
        style="@style/InfoElementStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/zip_code_layout"
        app:layout_constraintTop_toBottomOf="@id/country_code_layout">
        <TextView
            style="@style/HeaderStartStyle"
            android:text="@string/region"
            android:id="@+id/header_start9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            style="@style/HeaderEndStyle"
            android:id="@+id/header_end9"
            tools:text="Москва и МО."
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/header_start9" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/zip_code_layout"
        style="@style/InfoElementStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/time_zone_layout"
        app:layout_constraintTop_toBottomOf="@id/region_layout">
        <TextView
            style="@style/HeaderStartStyle"
            android:text="@string/zip_code"
            android:id="@+id/header_start8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            style="@style/HeaderEndStyle"
            android:id="@+id/header_end8"
            tools:text="192.168.1.0/22"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/header_start8" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/time_zone_layout"
        style="@style/InfoElementStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/currency_layout"
        app:layout_constraintTop_toBottomOf="@id/zip_code_layout">
        <TextView
            style="@style/HeaderStartStyle"
            android:text="@string/local_time"
            android:id="@+id/header_start7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            style="@style/HeaderEndStyle"
            android:id="@+id/header_end7"
            tools:text="(GMT +02:00)Moscow-01)"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/header_start7" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/currency_layout"
        style="@style/InfoElementStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/time_zone_layout">
        <TextView
            style="@style/HeaderStartStyle"
            android:text="@string/currency"
            android:id="@+id/header_start6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            style="@style/HeaderEndStyle"
            android:id="@+id/header_end6"
            tools:text="Russian ruble"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/header_start6" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>