<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".ui.MapActivity">
    <LinearLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/top_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginEnd="52dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@id/map"
        android:layout_marginBottom="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin">
        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width= "44dp"
            android:layout_height="44dp"
            android:layout_margin="@dimen/small_margin"
            android:background="?attr/colorPrimary"
            android:src="@drawable/back_icon" />
        <TextView
            android:textSize="25sp"
            android:fontFamily="@font/futura_medium"
            android:layout_marginStart="@dimen/medium_margin"
            android:text="@string/map"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp" />
    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        app:layout_constraintBottom_toTopOf="@id/ip_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_header" />

    <TextView
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/map"
        app:layout_constraintBottom_toTopOf="@id/country_layout"
        android:id="@+id/ip_tv"
        android:textSize="25sp"
        android:fontFamily="@font/futura_medium"
        android:layout_marginStart="@dimen/medium_margin"
        tools:text ="192.168.1.1/24"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:textColor="?attr/colorOnPrimary"
        android:layout_marginEnd="31dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/flag_view"/>

    <ImageView
        android:id="@+id/flag_view"
        android:layout_width="38dp"
        android:layout_height="26dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/flag"
        app:flow_horizontalBias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ip_tv"
        app:layout_constraintTop_toBottomOf="@id/map" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/country_layout"
        style="@style/InfoElementStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ip_tv"
        app:layout_constraintBottom_toTopOf="@id/city_layout">
        <TextView
            style="@style/HeaderStartStyle"
            android:text="@string/country"
            android:id="@+id/header_start5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            style="@style/HeaderEndStyle"
            android:id="@+id/header_end5"
            tools:text="Россия"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/header_start5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/city_layout"
        style="@style/InfoElementStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/country_layout"
        app:layout_constraintBottom_toTopOf="@id/longitude_layout">
        <TextView
            style="@style/HeaderStartStyle"
            android:text="@string/city"
            android:id="@+id/header_start4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/header_2"
            />

        <TextView
            style="@style/HeaderEndStyle"
            android:id="@+id/header_end4"
            tools:text="Москва"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/header_start4" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/longitude_layout"
        style="@style/InfoElementStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/city_layout"
        app:layout_constraintBottom_toTopOf="@id/latitude_layout">
        <TextView
            style="@style/HeaderStartStyle"
            android:text="@string/latitude"
            android:id="@+id/header_start1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            style="@style/HeaderEndStyle"
            android:id="@+id/header_end1"
            tools:text="77.245233"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/header_start1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/latitude_layout"
        style="@style/InfoElementStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/longitude_layout"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            style="@style/HeaderStartStyle"
            android:text="@string/longitude"
            android:id="@+id/header_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            style="@style/HeaderEndStyle"
            android:id="@+id/header_end"
            tools:text="32.234232"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/header_start" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>